# flujo

./: .gitmodules  CMakeLists.txt  Doxyfile
assets/: config.toml
flujo/: compile-detail.h.in  main.cpp
flujo/config/: app-config.hpp  loader.cpp  loader.hpp
flujo/config/domains/: general.hpp  security.hpp  telegram.hpp
flujo/server/: server.cpp  server.hpp  session.cpp  session.hpp
